# py-dpkg-sig

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
dpkg_sig/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
tests/data/: test_keyring.gpg  test_package.deb
